# notesNeurosis

./: .gitignore  build_err.txt  index.html  orchid-notes-antigravity-prompt_1.md  package-lock.json  package.json  tauri.key  tauri.key.pub
.github/workflows/: build.yml
Timeblocking-handoff/timeblocking/: README.md
docs/: # 🌸 Orchid Notes — Antigravity Build Pr.ini  Add a Planner tab to NoteNeurosis.md  referenve save point.md
notesNeurosis/: index.html
notesNeurosis/src/: App.tsx
notesNeurosis/src-tauri/: Cargo.toml  tauri.conf.json
orchid-notes/: package-lock.json  package.json
orchid-notes/src/: App.css  App.tsx
orchid-notes/src-tauri/: Cargo.toml  null  tauri.conf.json
src/: App.css  App.css.tmp.14092.1773714288368  App.tsx
src-tauri/: Cargo.toml  build_err2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BoardTabStrip.module.css  BoardTabStrip.tsx  ClockDisplay.module.css  ContextMenu.module.css  ContextMenu.tsx  GoalsView.module.css  GoalsView.tsx  HabitsPage.tsx  IntegratedSchedulePanel.tsx  IntervalView.module.css  IntervalView.tsx  MultiTodoView.module.css  MultiTodoView.tsx  NoteEditor.module.css  NoteEditor.tsx  OptionsModal.module.css  OptionsModal.tsx  PlannerView.tsx  RichTextEditor.module.css  RichTextEditor.tsx  SequenceView.module.css  SequenceView.tsx  TaskEditor.module.css  TaskEditor.tsx  TaskItem.module.css  TaskItem.tsx  TimeblockView.tsx  TimerModal.module.css  TimerModal.tsx
src/hooks/: useAudio.ts  useCareSchedule.ts  useHabits.ts  (+7 more)
(+31 files in other folders)
