[workspace]
resolver = "2"

[package]
name = "notes-neurosis"
version = "0.1.5"
description = "Orchid Notes — transparent desktop note app"
authors = ["PrettySailorSoldier"]
edition = "2021"

[lib]
name = "orchid_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.2"
tauri-plugin-updater = "2"
